cluster/default/whoami/whoami-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myingressroute
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`whoami.k3s.rabbito.tech`)
    kind: Rule
    services:
    - name: whoami
      port: 80
