cluster/default/whoami/whoami-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: default

spec:
  entryPoints:
    - websecure

  routes:
  - match: Host(`whoami.k3s.rabbito.tech`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: letsencrypt
